--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     align-items: center;
     background: linear-gradient(to top left, #ffadad, #ffd6a5, #fdffb6, #caffbf, #9bf6ff, #a0c4ff, #bdb2ff, #ffc6ff, #ffadad, #ffd6a5);
     background-size: 400% 400%;
-    animation: gradientAnimation 0.0001s linear infinite;
+    animation: gradientAnimation 30s linear infinite;
 }
 
 #alert-box {
@@ -85,7 +85,7 @@
     opacity: 1;
 }
 
-#wordBox {
+.pop-up {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -255,7 +255,7 @@ button:hover {
         onmouseout="this.style.color='white'"></p>
     </div>
 
-    <div id="wordBox" class="hidden" class="pop-up" >
+    <div id="wordBox" class="hidden pop-up" >
         <p id="phrase2"></p>
         <p id="correctWord"></p>
         <button onclick="resetGame()" style="color: white; display: inline-block;" 
@@ -263,9 +263,9 @@ button:hover {
         onmouseout="this.style.color='white'">Do you want to try again?</button>
     </div>
 
-    <div id="word-box" class="hidden" class="pop-up">
+    <div id="word-box"  class="hidden pop-up">
         <p id="phrase3"></p>
-        <p id="correctWord"></p>
+        <p id="correctWord2"></p>
         <button onclick="resetGame()" style="color: white; display: inline-block;" 
         onmouseover="this.style.color='green'" 
         onmouseout="this.style.color='white'">Do you want to try again?</button>
